- add margin for delux and premium cards on mobile - fix position of arrows - reduce padding in paymentFooter

--- a/src/components/Brands.css
+++ b/src/components/Brands.css
@@ -3,7 +3,6 @@
   padding: var(--space-xl) 24px;
   text-align: center;
   position: relative;
-  z-index: 10; /* Establish stacking context for chevron */
 }
 
 .brands-title {
@@ -61,6 +60,10 @@
 }
 
 @media (max-width: 767px) {
+  .brands-section {
+    padding-top: var(--space-3xxl);
+  }
+
   .brand-item:nth-child(1) {
     order: 3;
   }
@@ -122,6 +125,5 @@
     left: 0;
     width: 100%;
     height: 25%;
-    z-index: 12;
   }
 }
